[tool.poetry]
name = "clasync"
version = "0.0.0"
description = "Async Fork of cloudlink"
authors = ["showierdata9978 <68120127+showierdata9978@users.noreply.github.com>"]
license = "MEOW"

[tool.poetry.dependencies]
python = "^3.10"
websockets = "^10.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
